updated Indonesian translation
updated Indonesian translation credits entry

--- a/po/wesnoth-low/id.po
+++ b/po/wesnoth-low/id.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2011-08-21 22:26+0700\n"
+"POT-Creation-Date: 2011-10-17 23:28+0200\n"
+"PO-Revision-Date: 2011-10-30 16:08+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -252,12 +252,6 @@ msgstr "Erethean"
 
 #. [multiplayer]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:4
-#, fuzzy
-#| msgid ""
-#| "<i>The Legend of Wesmere</i>\n"
-#| "Multiplayer Campaign\n"
-#| "Chapter one\n"
-#| " Easy difficulty"
 msgid ""
 "<i>The Legend of Wesmere</i>\n"
 "Multiplayer Campaign\n"
@@ -265,8 +259,7 @@ msgid ""
 msgstr ""
 "<i>Legenda Wesmere</i>\n"
 "Kampanye Multiplayer\n"
-"Bab satu\n"
-" Kesulitan mudah "
+"Bab satu"
 
 #. [part]
 #. [scenario]: id=01_The_Uprooting
@@ -277,18 +270,12 @@ msgstr "Mencabut"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:44
-#, fuzzy
-#| msgid ""
-#| "<i>The Legend of Wesmere</i>,\n"
-#| "Chapter One\n"
-#| "Flight and fight"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter One"
 msgstr ""
 "<i>Legenda Wesmere</i>,\n"
-"Bab satu\n"
-"Pelarian dan pertempuran"
+"Bab Satu"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:48
@@ -296,6 +283,8 @@ msgid ""
 "Chapter One,\n"
 "<i>Flight and fight</i>"
 msgstr ""
+"Bab Satu,\n"
+"<i>Lari dan berjuang</i>"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:57
@@ -303,28 +292,21 @@ msgid ""
 "The great elven heroes Kalenz and Landar were born in a quiet green wood in "
 "Lintanir on the fringes of the Great Northern Forest."
 msgstr ""
+"Pahlawan-pahlawan elf hebat Kalenz dan Landar dilahirkan di dalam sebuah "
+"hutan hijau yang tenang di Lintanir di pinggir Hutan Besar Utara."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:60
-#, fuzzy
-#| msgid ""
-#| "The great elvish hero Kalenz was born in a quiet green wood in Lintanir "
-#| "on the fringes of the Great Northern Forest. Though not of noble birth, "
-#| "he showed early promise in the arts of his people. His quick intelligence "
-#| "gained him more than usual respect among elders normally inclined to pay "
-#| "little heed to anyone younger than a century old."
 msgid ""
 "Though not of noble birth, Kalenz showed early promise in the arts of his "
 "people. His quick intelligence gained him more than usual respect among "
 "elders normally inclined to pay little heed to anyone younger than a century "
 "old."
 msgstr ""
-"Pahlawan besar elf Kalenz lahir di sebuah hutan hijau yang tenang di "
-"Lintanir di pinggiran Hutan Besar Utara. Meskipun bukan keturunan ningrat, "
-"dia lekas menunjukkan bakat dalam kesenian bangsanya. kecerdasan cepatnya "
-"memberinya penghormatan lebih dari biasanya diantara para senior yang "
-"biasanya cenderung untuk sedikit mengindahkan orang yang lebih muda daripada "
-"yang satu abad lebih tua."
+"Meskipun bukan keturunan ningrat, Kalenz lekas menunjukkan bakat dalam "
+"kesenian bangsanya. Kecerdasan cepatnya memberinya penghormatan lebih dari "
+"biasanya diantara para senior yang biasanya cenderung untuk sedikit "
+"mengindahkan orang yang lebih muda satu abad usianya."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:66
@@ -334,6 +316,10 @@ msgid ""
 "But there was no real harm in the boy, and his jokes made him popular among "
 "the younger elves."
 msgstr ""
+"Landar dan Kalenz berteman sejak masa kanak-kanak. Dia juga menarik "
+"perhatian para tetua, pada mulanya karena lihai dalam kenakalan dan "
+"sendagurau. Tetapi anak itu tidak benar-benar jahat, dan lelucon-leluconnya "
+"membuat dia terkenal diantara para elf yang lebih muda."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:72
@@ -350,37 +336,21 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:76
-#, fuzzy
-#| msgid ""
-#| "Some changes were good. The Elves, awakened as from a long dream, began "
-#| "to increase in population. But some were very bad, and the worst of those "
-#| "was the coming of the orcs, the wreckers, the tree-killers. The years of "
-#| "Kalenz’s long childhood were a golden age, and the last time of "
-#| "untroubled peace."
 msgid ""
 "Some changes were good. The Elves, awakened as from a long dream, began to "
 "increase in population. But some were very bad, and the worst of those was "
 "the coming of the orcs, the wreckers, the tree-killers. The years of their "
 "long childhoods were a golden age, and the last time of untroubled peace."
 msgstr ""
-"Beberapa perubahan yang baik. Para Elf, terbangun seperti dalam mimpi yang "
-"panjang, mulai meningkat dalam populasi. Tetapi beberapa perubahan sangat "
-"buruk, dan yang terburuk dari perubahan-perubahan itu adalah kedatangan para "
-"Orc, si perusak, pembunuh-pohon. Tahun-tahun masa kecil panjang Kalenz "
-"adalah zaman keemasan, dan terakhir kali kedamaian tidak terganggu."
+"Beberapa perubahan adalah baik. Para Elf, terbangun seperti dalam sebuah "
+"mimpi yang panjang, mulai meningkat dalam populasi. Tetapi beberapa "
+"perubahan sangat buruk, dan yang terburuk dari perubahan-perubahan itu "
+"adalah kedatangan para orc, para perusak, para pembunuh-pohon. Tahun-tahun "
+"masa kanak-kanak panjang mereka adalah zaman keemasan, dan terakhir kali "
+"kedamaian tidak terganggu."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:82
-#, fuzzy
-#| msgid ""
-#| "The elves had never been a martial people, and they were not prepared for "
-#| "the inevitable war with the orcs. Kalenz came of age in the very year "
-#| "that Erlornas of Wesmere fought the first orcish raiders. Within the next "
-#| "decade orcish raids greatly increased, and their shadow loomed ever "
-#| "greater over the elves.\n"
-#| "\n"
-#| "This is the story of Kalenz, and of the Elves in the days of the humans "
-#| "in Wesnoth."
 msgid ""
 "The elves had never been a martial people, and they were not prepared for "
 "the inevitable war with the orcs. The friends came of age in the very year "
@@ -392,12 +362,13 @@ msgid ""
 "the humans in Wesnoth."
 msgstr ""
 "Para elf bukanlah bangsa yang suka berperang, dan mereka tidak siap untuk "
-"peperangan tak terelakkan dengan Orc. Kalenz cukup usia pada tahun itu juga "
-"saat Erlornas dari Wesmere melawan perampok orc pertama. Dalam dekade "
-"berikutnya penyerangan orc meningkat pesat, dan bayangan mereka tampak "
-"semakin besar membayangi elf.\n"
+"peperangan yang pasti terjadi dengan orc. Teman-teman cukup usia pada tahun "
+"itu juga saat Erlornas dari Wesmere melawan perampok orc pertama. Dalam "
+"dasawarsa berikutnya penyerangan orc meningkat pesat, dan bayangan mereka "
+"tampak semakin besar membayangi elf.\n"
 "\n"
-"Ini adalah kisah Kalenz, dan Bangsa Elf di hari-hari manusia di Wesnoth."
+"Ini adalah kisah Kalenz, Landar, dan Bangsa Elf di hari-hari pertama manusia "
+"di Wesnoth."
 
 #. [side]
 #. [side]: id=Velon, type=Elvish Captain
@@ -738,6 +709,9 @@ msgid ""
 "Fight to subdue, and do not kill unless you must. We have foes enough as it "
 "is without making blood enemies of these dwarves."
 msgstr ""
+"Berperanglah untuk menundukkan, dan jangan membunuh kecuali kau terpaksa. "
+"Kita sudah memiliki cukup musuh sekarang tanpa menumpahkan darah musuh-musuh "
+"para dwarf ini."
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/02_Hostile_Mountains.cfg:349
@@ -1069,10 +1043,8 @@ msgstr ""
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:931
-#, fuzzy
-#| msgid "How can they dare to break the treaty!"
 msgid "How dare they break the treaty!"
-msgstr "Bagaimana bisa mereka berani melanggar perjanjian!"
+msgstr "Beraninya mereka melanggar perjanjian!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:956
@@ -1080,8 +1052,8 @@ msgid ""
 "We have failed to relieve the defenders, and more orcish war-bands are "
 "arriving. All is lost!"
 msgstr ""
-"Kami telah gagal untuk meringankan pembela, dan lebih banyak kelompok perang "
-"orc yang tiba. Semua sia-sia!"
+"Kami telah gagal untuk meringankan para pembela, dan lebih banyak gerombolan "
+"perang orc yang tiba. Semua sia-sia!"
 
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:965
@@ -1204,19 +1176,11 @@ msgstr ""
 
 #. [multiplayer]: id=04_The_Elvish_Treasury
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:17
-#, fuzzy
-#| msgid "3p MC — LoW, Hard Mode, Chapter two"
 msgid "3p MC — LoW, Chapter two"
-msgstr "3p MC — LoW, Mode Sulit, Bab dua"
+msgstr "3p MC — LoW, Bab dua"
 
 #. [multiplayer]: id=04_The_Elvish_Treasury
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:18
-#, fuzzy
-#| msgid ""
-#| "<i>The Legend of Wesmere</i>\n"
-#| "Multiplayer Campaign\n"
-#| "Chapter two\n"
-#| " Hard difficulty"
 msgid ""
 "<i>The Legend of Wesmere</i>\n"
 "Multiplayer Campaign\n"
@@ -1224,8 +1188,7 @@ msgid ""
 msgstr ""
 "<i>Legenda Wesmere</i>\n"
 "Kampanye Multiplayer\n"
-"Bab dua\n"
-" Kesulitan sulit"
+"Bab dua"
 
 #. [scenario]: id=04_The_Elvish_Treasury
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:26
@@ -1234,21 +1197,21 @@ msgstr "Harta benda Elf"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:52
-#, fuzzy
-#| msgid "The Legend of Wesmere, Chapter two"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter Two"
-msgstr "Legenda Wesmere, Bab dua"
+msgstr ""
+"<i>Legenda Wesmere</i>,\n"
+"Bab Dua"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:57
-#, fuzzy
-#| msgid "Chapter Two: The Treasury"
 msgid ""
 "Chapter Two,\n"
 "<i>The Treasury</i>"
-msgstr "Bab Dua: Harta Benda"
+msgstr ""
+"Bab Dua,\n"
+"<i>Perbendaharaan</i>"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:61
@@ -1807,7 +1770,7 @@ msgid ""
 "apparently withdrawn to regroup after their defeats. Kalenz and his band "
 "returned just in time..."
 msgstr ""
-"Perjalanan kembali ke Wesmere itu anehnya tak banyak peristiwanya, para arc "
+"Perjalanan kembali ke Wesmere itu anehnya tak banyak peristiwanya, para orc "
 "yang tampaknya ditarik untuk berkumpul kembali setelah mereka dikalahkan. "
 "Kalenz dan kelompoknya kembali tepat pada waktunya..."
 
@@ -1858,25 +1821,18 @@ msgstr "Kejar mereka dan bunuh setiap dari mereka!"
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:509
-#, fuzzy
-#| msgid ""
-#| "It's not wise to bring a wounded dear in a desperate situation. Let them "
-#| "flee so they can tell about their defeat."
 msgid ""
 "It is not wise to put a wounded foe in a desperate situation; they will but "
 "fight harder for it. Break their will and let them flee, so they will spread "
 "fear of us among their kind."
 msgstr ""
-"Ini tidak bijaksana untuk membawa seorang berharga yang terluka dalam "
-"situasi putus asa. Biarkan mereka melarikan diri sehingga mereka dapat "
-"menceritakan tentang kekalahan mereka."
+"Ini tidak bijaksana untuk membawa seorang musuh yang terluka dalam situasi "
+"putus asa; mereka hanya akan berjuang lebih keras karena itu. Patahkan "
+"semangat mereka dan biarkan mereka melarikan diri, sehingga mereka dapat "
+"menyebarkan ketakutan terhadap kita diantara kaum mereka."
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:513
-#, fuzzy
-#| msgid ""
-#| "She is right. Don't let them lure you away from the Ka’lian, preparations "
-#| "for when more of them arrive return must be done."
 msgid ""
 "She is right. Don’t let them lure you away from the Ka’lian, preparations "
 "for when more of them arrive return must be made."
@@ -1890,7 +1846,7 @@ msgid ""
 "The orcs are not defeated, and our troops and supplies are exhausted. This "
 "is the end!"
 msgstr ""
-"Para orc tidak dikalahkan, dan pasukan kami dan perbekalan habis. Ini adalah "
+"Para orc tidak dikalahkan, dan pasukan dan perbekalan kami habis. Ini adalah "
 "akhir!"
 
 #. [message]: id=Kalenz
@@ -2416,13 +2372,11 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/08_Council_of_Hard_Choices.cfg:80
-#, fuzzy
-#| msgid "And our home? How do we free Lintanir without bringing war to orcs?"
 msgid ""
 "And our home? How can we free Lintanir without taking the war to the orcs?"
 msgstr ""
-"Dan rumah kita? Bagaimana kita membebaskan Lintanir tanpa berperang dengan "
-"bangsa orc?"
+"Dan kampung halaman kita? Bagaimana kita bisa membebaskan Lintanir tanpa "
+"berperang dengan bangsa orc?"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/08_Council_of_Hard_Choices.cfg:85
@@ -2572,12 +2526,12 @@ msgstr "Pemburu Hadiah"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:35
-#, fuzzy
-#| msgid "The Legend of Wesmere, Chapter two"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter Three"
-msgstr "Legenda Wesmere, Bab dua"
+msgstr ""
+"<i>Legenda Wesmere</i>,\n"
+"Bab Tiga"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:37
@@ -2591,12 +2545,12 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:43
-#, fuzzy
-#| msgid "Chapter two, Part one: The book of Crelanu"
 msgid ""
 "Chapter Three,\n"
 "<i>The Book of Crelanu</i>"
-msgstr "Bab dua, Bagian satu: Kitab Crelanu"
+msgstr ""
+"Bab Tiga,\n"
+"<i>Buku Crelanu</i>"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:48
@@ -2688,12 +2642,9 @@ msgstr ""
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:432
-#, fuzzy
-#| msgid ""
-#| "They are far too much to risk a confrontation, let's cross the river!"
 msgid "They are far too numerous to risk battle with. Let’s cross the river!"
 msgstr ""
-"Mereka terlalu banyak untuk mengambil risiko konfrontasi, mari kita "
+"Mereka terlalu banyak untuk mengambil risiko pertempuran. Mari kita "
 "menyeberangi sungai!"
 
 #. [message]: id=Olurf
@@ -3752,21 +3703,21 @@ msgstr "Alliansi Manusia"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:125
-#, fuzzy
-#| msgid "The Legend of Wesmere, Chapter two"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter Four"
-msgstr "Legenda Wesmere, Bab dua"
+msgstr ""
+"<i>Legenda Wesmere</i>,\n"
+"Bab Empat"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:130
-#, fuzzy
-#| msgid "Chapter two, Part two, The Alliance"
 msgid ""
 "Chapter Four,\n"
 "<i>The Alliance</i>"
-msgstr "Bab dua, Bagian dua, Aliansi"
+msgstr ""
+"Bab Empat,\n"
+"<i>Aliansi</i>"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:135
@@ -4849,18 +4800,12 @@ msgstr "Pembalasan Dendam yang Mahal"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/19_Costly_Revenge.cfg:50
-#, fuzzy
-#| msgid ""
-#| "<i>The Legend of Wesmere</i>,\n"
-#| "Chapter One\n"
-#| "Flight and fight"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter Five"
 msgstr ""
 "<i>Legenda Wesmere</i>,\n"
-"Bab satu\n"
-"Pelarian dan pertempuran"
+"Bab Lima"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/19_Costly_Revenge.cfg:55
@@ -4868,6 +4813,8 @@ msgid ""
 "Chapter Five,\n"
 "<i>Civil War</i>"
 msgstr ""
+"Bab Lima,\n"
+"<i>Perang Saudara</i>"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/19_Costly_Revenge.cfg:59
