--- a/po/wesnoth-dw/id.po
+++ b/po/wesnoth-dw/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2011-08-06 14:00+0700\n"
+"PO-Revision-Date: 2011-10-29 13:40+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -310,7 +310,7 @@ msgid ""
 "but when war looms, a kai must lead. It is our way."
 msgstr ""
 "Gwabbo berbicara dengan bijaksana. Anda harus bertempur; saya akan "
-"melindungi anda sebaik yang saya bisa...  tapi ketika perang membayangi, "
+"melindungi anda sebaik yang saya bisa... tapi ketika perang membayangi, "
 "seorang kai harus memimpin. Ini adalah cara kita."
 
 #. [message]: speaker=narrator
@@ -1851,20 +1851,14 @@ msgstr "Apa? Bagaimana itu bisa terjadi?"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:209
-#, fuzzy
-#| msgid ""
-#| "When your grandfather married Indress, he he did not know that Tyegëa had "
-#| "already born him a son. When she delivered your father to Jotha, your "
-#| "grandmother Indress agreed to keep it secret and raise the infant as her "
-#| "own."
 msgid ""
 "When your grandfather married Indress, he did not know that Tyegëa had "
 "already born him a son. When she delivered your father to Jotha, your "
 "grandmother Indress agreed to keep it secret and raise the infant as her own."
 msgstr ""
 "Ketika kakek anda menikahi Indress, ia ia tidak tahu bahwa Tyegëa telah "
-"melahirkan baginya seorang putra. Ketika dia mengirim ayahmu ke Jotha, "
-"Indress nenek anda setuju untuk merahasiakan ini dan membesarkan bayi itu "
+"melahirkan baginya seorang putra. Ketika Tyegëa mengirim ayahmu ke Jotha, "
+"Indress nenek anda setuju untuk merahasiakannya dan membesarkan bayi itu "
 "seperti anaknya sendiri."
 
 #. [message]: speaker=Tyegea
@@ -3082,8 +3076,6 @@ msgstr "ekor"
 
 #. [set_variable]
 #: data/campaigns/Dead_Water/units/Brawler.cfg:198
-#, fuzzy
-#| msgid "stunned"
 msgid "female^stunned"
 msgstr "membingungkan"
 
@@ -3343,9 +3335,6 @@ msgstr ""
 "Aku setuju. Aku benci untuk meninggalkan rumah kita, tapi kita akan kembali."
 
 #: data/campaigns/Dead_Water/utils/specials.cfg:4
-#, fuzzy
-#| msgid ""
-#| " This unit is able stun its enemies, disrupting their zones of control."
 msgid ""
 " This unit is able to stun its enemies, disrupting their zones of control."
 msgstr ""
@@ -3359,10 +3348,6 @@ msgstr "membingungkan"
 
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:10
-#, fuzzy
-#| msgid ""
-#| "This attack hits so hard that the defender is dazed and can no longer "
-#| "enforce a zone of control. The effect wears off on the defenders next turn"
 msgid ""
 "This attack hits so hard that the defender is dazed and can no longer "
 "enforce a zone of control. The effect wears off on the defender’s next turn."
