Updated the Latin translation.

--- a/po/wesnoth-dm/la.po
+++ b/po/wesnoth-dm/la.po
@@ -3100,10 +3100,8 @@ msgstr "Turgraus"
 
 #. [objective]: condition=lose
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:198
-#, fuzzy
-#| msgid "Death of Garard"
 msgid "Death of Garard II"
-msgstr "Mors Garardus"
+msgstr "Mors Garardi II"
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:243
