--- a/po/wesnoth-lib/la.po
+++ b/po/wesnoth-lib/la.po
@@ -1666,6 +1666,8 @@ msgstr ""
 
 #. [toggle_button]: id=ignore_all
 #: data/gui/default/window/game_save_oos.cfg:143
+#, fuzzy
+#| msgid "Ignore All"
 msgid "Ignore all"
 msgstr "Omnem Ignorare"
 
@@ -2118,6 +2120,8 @@ msgstr "Aura Viculorum"
 
 #. [toggle_button]: id=fog
 #: data/gui/default/window/mp_create_game.cfg:460
+#, fuzzy
+#| msgid "Fog of War"
 msgid "Fog of war"
 msgstr "Nebula Belli"
 
@@ -2421,10 +2425,14 @@ msgid "Full screen"
 msgstr "Scrinium Totum vel in Fenestra Permutare"
 
 #: src/game_preferences_display.cpp:164
+#, fuzzy
+#| msgid "Accelerated Speed"
 msgid "Accelerated speed"
 msgstr "Velocitas Celeris"
 
 #: src/game_preferences_display.cpp:165
+#, fuzzy
+#| msgid "Skip AI Moves"
 msgid "Skip AI moves"
 msgstr "Vices IA Praeterire"
 
@@ -2433,6 +2441,8 @@ msgid "Interrupt move when an ally is sighted"
 msgstr ""
 
 #: src/game_preferences_display.cpp:167
+#, fuzzy
+#| msgid "Show Grid"
 msgid "Show grid"
 msgstr "Cancellos Monstrare"
 
@@ -2500,10 +2510,14 @@ msgid "Add As Ignore"
 msgstr "Ut Negelctus Addere"
 
 #: src/game_preferences_display.cpp:183
+#, fuzzy
+#| msgid "Show Floating Labels"
 msgid "Show floating labels"
 msgstr "Titulos Nantes Monstrare"
 
 #: src/game_preferences_display.cpp:184
+#, fuzzy
+#| msgid "Turn Dialog"
 msgid "Turn dialog"
 msgstr "Colloquium Vicis"
 
@@ -2516,10 +2530,14 @@ msgid "Hide allies’ plans by default"
 msgstr ""
 
 #: src/game_preferences_display.cpp:187
+#, fuzzy
+#| msgid "Turn Bell"
 msgid "Turn bell"
 msgstr "Tintinnabulum Vicis"
 
 #: src/game_preferences_display.cpp:188
+#, fuzzy
+#| msgid "Show Team Colors"
 msgid "Show team colors"
 msgstr "Colores Manuum Monstrare"
 
@@ -2581,10 +2599,14 @@ msgid "Show Unit Idle Animations"
 msgstr "Animationes Actorum Otiosorum Monstrare"
 
 #: src/game_preferences_display.cpp:206
+#, fuzzy
+#| msgid "Show Unit Standing Animations"
 msgid "Show unit standing animations"
 msgstr "Animationes Actorum Stantium Monstrare"
 
 #: src/game_preferences_display.cpp:207 src/hotkeys.cpp:55
+#, fuzzy
+#| msgid "Animate Map"
 msgid "Animate map"
 msgstr "Chartam Animare"
 
@@ -2594,6 +2616,8 @@ msgid "Volume:"
 msgstr "Magnitudo:"
 
 #: src/game_preferences_display.cpp:214
+#, fuzzy
+#| msgid "Scroll Speed:"
 msgid "Scroll speed:"
 msgstr "Velocitas Gyri: "
 
@@ -2648,8 +2672,10 @@ msgid "Change the buffer size"
 msgstr "Magnitudinem musicae mutare"
 
 #: src/game_preferences_display.cpp:285 src/game_preferences_display.cpp:884
+#, fuzzy
+#| msgid "Map size: "
 msgid "Buffer size: "
-msgstr ""
+msgstr "Magnitudo chartae:"
 
 #: src/game_preferences_display.cpp:292
 #, fuzzy
@@ -3036,6 +3062,8 @@ msgid "Turn"
 msgstr "Vicis"
 
 #: src/gui/dialogs/game_load.cpp:315
+#, fuzzy
+#| msgid "Scenario Start"
 msgid "Scenario start"
 msgstr "Initium Scaenarii"
 
@@ -3259,6 +3287,8 @@ msgid "Toggle Grid"
 msgstr "Rete Ponere/Tollere"
 
 #: src/hotkeys.cpp:82
+#, fuzzy
+#| msgid "Mouse Scrolling"
 msgid "Mouse scrolling"
 msgstr "Gyrum Muris"
 
@@ -3331,10 +3361,14 @@ msgid "Next Side"
 msgstr "Manus Secunda"
 
 #: src/hotkeys.cpp:106
+#, fuzzy
+#| msgid "Full map"
 msgid "Full Map"
 msgstr "Charta universa"
 
 #: src/hotkeys.cpp:108
+#, fuzzy
+#| msgid "Each team"
 msgid "Each Team"
 msgstr "Manus omnes"
 
@@ -3343,6 +3377,8 @@ msgid "Team 1"
 msgstr "Manus I"
 
 #: src/hotkeys.cpp:111
+#, fuzzy
+#| msgid "Skip animation"
 msgid "Skip Animation"
 msgstr "Animationem praeterire"
 
@@ -3351,14 +3387,20 @@ msgid "Toggle Planning Mode"
 msgstr ""
 
 #: src/hotkeys.cpp:114
+#, fuzzy
+#| msgid "Delete planned action"
 msgid "Execute Planned Action"
-msgstr ""
+msgstr "Actionem contstitutam delere"
 
 #: src/hotkeys.cpp:115
+#, fuzzy
+#| msgid "Execute all actions"
 msgid "Execute All Actions"
 msgstr "Omnes actiones agere"
 
 #: src/hotkeys.cpp:116
+#, fuzzy
+#| msgid "Delete planned action"
 msgid "Delete Planned Action"
 msgstr "Actionem contstitutam delere"
 
@@ -3371,6 +3413,8 @@ msgid "Move Action Down Queue"
 msgstr ""
 
 #: src/hotkeys.cpp:119
+#, fuzzy
+#| msgid "Suppose dead"
 msgid "Suppose Dead"
 msgstr "Mortuum putare"
 
@@ -3598,6 +3642,8 @@ msgid "Run AI formula"
 msgstr ""
 
 #: src/hotkeys.cpp:209
+#, fuzzy
+#| msgid "Clear messages"
 msgid "Clear Messages"
 msgstr "Nuntios delere"
 
@@ -3606,6 +3652,8 @@ msgid "Refresh WML"
 msgstr "VML Novare"
 
 #: src/hotkeys.cpp:220
+#, fuzzy
+#| msgid "Next tip of the day"
 msgid "Next Tip of the Day"
 msgstr "Consilium secundum diei"
 
@@ -3615,6 +3663,8 @@ msgid "Previous Tip of the Day"
 msgstr "Actor Anterior"
 
 #: src/hotkeys.cpp:234
+#, fuzzy
+#| msgid "Start tutorial"
 msgid "Start Tutorial"
 msgstr "Rudimentum incipere"
 
@@ -3686,10 +3736,14 @@ msgid "Players:"
 msgstr "Lusores:"
 
 #: src/mapgen_dialog.cpp:123
+#, fuzzy
+#| msgid "Number of Hills:"
 msgid "Number of hills:"
 msgstr "Numerus Collium:"
 
 #: src/mapgen_dialog.cpp:124
+#, fuzzy
+#| msgid "Max Hill Size:"
 msgid "Max hill size:"
 msgstr "Maxima Magnitudo Collum:"
 
@@ -3698,6 +3752,8 @@ msgid "Villages:"
 msgstr "Viculi:"
 
 #: src/mapgen_dialog.cpp:126
+#, fuzzy
+#| msgid "Castle Size:"
 msgid "Castle size:"
 msgstr "Magnitudo Castelli:"
 
