Updated the British English translation.

--- a/po/wesnoth-dw/en_GB.po
+++ b/po/wesnoth-dw/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-10-17 17:49-0500\n"
+"PO-Revision-Date: 2011-10-31 16:33-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -616,24 +616,23 @@ msgstr "This is impossible!"
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:444
 msgid "With their master gone, the undead are vanishing!"
-msgstr ""
+msgstr "With their master gone, the undead are vanishing!"
 
 #. [unit]: type=Dread Bat, id=Fearsome Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:458
 msgid "Fearsome Bat"
-msgstr ""
+msgstr "Fearsome Bat"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:473
-#, fuzzy
 #| msgid "Look! There is a bat cowering in the corner here."
 msgid "Look! There is a massive bat back here."
-msgstr "Look! There is a bat cowering in the corner here."
+msgstr "Look! There is a massive bat back here."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:477
 msgid "Be courageous, and attack it anyway!"
-msgstr ""
+msgstr "Be courageous, and attack it anyway!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:481
@@ -641,38 +640,42 @@ msgid ""
 "But it isn't attacking <i>me</i>. Do you think, with its master gone, it "
 "might desire a new one?"
 msgstr ""
+"But it isn't attacking <i>me</i>. Do you think, with its master gone, it "
+"might desire a new one?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:485
 msgid ""
 "If it does not attack, we shall not kill it. Let us see if it follows us."
 msgstr ""
+"If it does not attack, we shall not kill it. Let us see if it follows us."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:491
 msgid "That is a mighty bat!"
-msgstr ""
+msgstr "That is a mighty bat!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:495
 msgid "It is no matter. I will destroy it immediately."
-msgstr ""
+msgstr "It is no matter. I will destroy it immediately."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:499
 msgid ""
 "Hold a moment! Do you think, with its master gone, it might desire a new one?"
 msgstr ""
+"Hold a moment! Do you think, with its master gone, it might desire a new one?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:503
 msgid "If it does not attack, do not kill it. Let us see if it follows us."
-msgstr ""
+msgstr "If it does not attack, do not kill it. Let us see if it follows us."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:540
 msgid "With their master gone, the undead are fading away!"
-msgstr ""
+msgstr "With their master gone, the undead are fading away!"
 
 #. [unit]: type=Vampire Bat, id=Friendly Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:555
@@ -681,10 +684,9 @@ msgstr "Friendly Bat"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:570
-#, fuzzy
 #| msgid "Look! There is a bat cowering in the corner here."
 msgid "And look! There is a bat cowering in the corner here."
-msgstr "Look! There is a bat cowering in the corner here."
+msgstr "And look! There is a bat cowering in the corner here."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:574
@@ -737,33 +739,33 @@ msgstr "Apparently you have your own bat."
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:647
 msgid "With their master gone, the skeletons are crumbling!"
-msgstr ""
+msgstr "With their master gone, the skeletons are crumbling!"
 
 #. [unit]: type=Walking Corpse, id=Undead Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:660
-#, fuzzy
 #| msgid "Undead"
 msgid "Undead Bat"
-msgstr "Undead"
+msgstr "Undead Bat"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:669
-#, fuzzy
 #| msgid "Look! There is a bat cowering in the corner here."
 msgid ""
 "Look! There is a bat in the corner here. It is moving, but it looks half "
 "dead."
-msgstr "Look! There is a bat cowering in the corner here."
+msgstr ""
+"Look! There is a bat in the corner here. It is moving, but it looks half "
+"dead."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:678
 msgid "No, that thing is all the way dead."
-msgstr ""
+msgstr "No, that thing is all the way dead."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:684
 msgid "Actually, I believe it is truly dead."
-msgstr ""
+msgstr "Actually, I believe it is truly dead."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:690
@@ -771,25 +773,25 @@ msgid ""
 "I beleive it is undead and has no will of its own, but the Kai may have the "
 "will power to direct it."
 msgstr ""
+"I believe it is undead and has no will of its own, but the Kai may have the "
+"will power to direct it."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:694
 msgid "Fascinating. I shall certainly try."
-msgstr ""
+msgstr "Fascinating. I shall certainly try."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:706
-#, fuzzy
 #| msgid "Look, this chest was in his tent. It is filled with gold!"
 msgid "He had a chest in his tent, too. It is filled with gold!"
-msgstr "Look, this chest was in his tent. It is filled with gold!"
+msgstr "He had a chest in his tent, too. It is filled with gold!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:718
-#, fuzzy
 #| msgid "You receive 100 gold."
 msgid "You receive 120 gold."
-msgstr "You receive 100 gold."
+msgstr "You receive 120 gold."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:725
