--- a/po/wesnoth-lib/en_GB.po
+++ b/po/wesnoth-lib/en_GB.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-10-17 17:50-0500\n"
+"PO-Revision-Date: 2011-10-31 16:31-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -1082,10 +1082,9 @@ msgstr "Wooden Bridge"
 #. [terrain_type]: id=rotbridgediag2
 #: data/core/terrain.cfg:1931 data/core/terrain.cfg:1943
 #: data/core/terrain.cfg:1955
-#, fuzzy
 #| msgid "Wooden Bridge"
 msgid "Rotting Bridge"
-msgstr "Wooden Bridge"
+msgstr "Rotting Bridge"
 
 #. [terrain_type]: id=stone_bridge
 #: data/core/terrain.cfg:1969 data/core/terrain.cfg:1981
@@ -1252,15 +1251,14 @@ msgstr "None"
 
 #. [label]
 #: data/gui/default/window/addon_uninstall_list.cfg:51
-#, fuzzy
 #| msgid "Update Add-ons"
 msgid "Uninstall Add-ons"
-msgstr "Update Add-ons"
+msgstr "Uninstall Add-ons"
 
 #. [scroll_label]
 #: data/gui/default/window/addon_uninstall_list.cfg:70
 msgid "Choose the add-ons you want to remove."
-msgstr ""
+msgstr "Choose the add-ons you want to remove."
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [button]: id=remove
@@ -1469,15 +1467,14 @@ msgstr "Resize map"
 
 #. [label]: id=title
 #: data/gui/default/window/editor_set_starting_position.cfg:50
-#, fuzzy
 #| msgid "Choose theme"
 msgid "Choose Player"
-msgstr "Choose theme"
+msgstr "Choose Player"
 
 #. [label]: id=message
 #: data/gui/default/window/editor_set_starting_position.cfg:70
 msgid "Which player should start here?"
-msgstr ""
+msgstr "Which player should start here?"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [label]
@@ -1487,10 +1484,9 @@ msgstr "Editor Settings"
 
 #. [label]
 #: data/gui/default/window/editor_settings.cfg:53
-#, fuzzy
 #| msgid "Time of day lighting preset"
 msgid "Time of day lighting preset:"
-msgstr "Time of day lighting preset"
+msgstr "Time of day lighting preset:"
 
 #. [button]: id=next_tod
 #. [button]: id=next_tip
@@ -1502,17 +1498,15 @@ msgstr "Next"
 
 #. [toggle_button]: id=custom_tod_toggle
 #: data/gui/default/window/editor_settings.cfg:104
-#, fuzzy
 #| msgid "Custom lighting setting"
 msgid "Custom lighting settings"
-msgstr "Custom lighting setting"
+msgstr "Custom lighting settings"
 
 #. [toggle_button]: id=custom_tod_auto_refresh
 #: data/gui/default/window/editor_settings.cfg:114
-#, fuzzy
 #| msgid "Auto-update map view"
 msgid "Automatically update map view"
-msgstr "Auto-update map view"
+msgstr "Automatically update map view"
 
 #. [label]
 #: data/gui/default/window/editor_settings.cfg:135
@@ -1532,7 +1526,7 @@ msgstr "Blue:"
 #. [toggle_button]: id=use_mdi
 #: data/gui/default/window/editor_settings.cfg:231
 msgid "Allow multiple maps to be open simultaneously"
-msgstr ""
+msgstr "Allow multiple maps to be open simultaneously"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [button]: id=apply
@@ -1777,10 +1771,9 @@ msgstr "Choose your preferred language:"
 #. [button]: id=ok
 #: data/gui/default/window/language_selection.cfg:128
 #: data/gui/default/window/language_selection.cfg:129 src/hotkeys.cpp:204
-#, fuzzy
 #| msgid "Change language"
 msgid "Change Language"
-msgstr "Change language"
+msgstr "Change Language"
 
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:109
@@ -2594,10 +2587,9 @@ msgid "Custom"
 msgstr "Custom"
 
 #: src/game_preferences_display.cpp:215
-#, fuzzy
 #| msgid "Show Unit Idle Animations"
 msgid "Show unit idle animations"
-msgstr "Show Unit Idle Animations"
+msgstr "Show unit idle animations"
 
 #: src/game_preferences_display.cpp:216
 msgid "Show unit standing animations"
@@ -2721,16 +2713,14 @@ msgid "Sighting an allied unit interrupts your unit’s movement"
 msgstr "Sighting an allied unit interrupts your unit’s movement"
 
 #: src/game_preferences_display.cpp:369
-#, fuzzy
 #| msgid "Save replay on SP/MP victory or MP defeat"
 msgid "Save Replay on SP/MP Victory or MP Defeat"
-msgstr "Save replay on SP/MP victory or MP defeat"
+msgstr "Save Replay on SP/MP Victory or MP Defeat"
 
 #: src/game_preferences_display.cpp:372
-#, fuzzy
 #| msgid "Delete auto-saves on SP/MP victory or MP defeat"
 msgid "Delete Auto-Saves on SP/MP Victory or MP Defeat"
-msgstr "Delete auto-saves on SP/MP victory or MP defeat"
+msgstr "Delete Auto-Saves on SP/MP Victory or MP Defeat"
 
 #: src/game_preferences_display.cpp:374
 msgid "Overlay a grid onto the map"
@@ -3032,13 +3022,12 @@ msgstr "Campaign: $campaign_name"
 
 #: src/gui/dialogs/game_load.cpp:305
 msgid "Test scenario"
-msgstr ""
+msgstr "Test scenario"
 
 #: src/gui/dialogs/game_load.cpp:313
-#, fuzzy
 #| msgid "replay"
 msgid "Replay"
-msgstr "replay"
+msgstr "Replay"
 
 #: src/gui/dialogs/game_load.cpp:315
 msgid "Turn"
@@ -3169,10 +3158,9 @@ msgid "Right Mouse Click"
 msgstr "Right Mouse Click"
 
 #: src/hotkeys.cpp:55
-#, fuzzy
 #| msgid "Animate map"
 msgid "Animate Map"
-msgstr "Animate map"
+msgstr "Animate Map"
 
 #: src/hotkeys.cpp:56
 msgid "Next Unit"
@@ -3215,10 +3203,9 @@ msgid "Default Zoom"
 msgstr "Default Zoom"
 
 #: src/hotkeys.cpp:66
-#, fuzzy
 #| msgid "Toggle Full screen"
 msgid "Toggle Full Screen"
-msgstr "Toggle Full screen"
+msgstr "Toggle Full Screen"
 
 #: src/hotkeys.cpp:67 src/hotkeys.cpp:1172
 msgid "Screenshot"
@@ -3273,10 +3260,9 @@ msgid "Toggle Grid"
 msgstr "Toggle Grid"
 
 #: src/hotkeys.cpp:82
-#, fuzzy
 #| msgid "Mouse scrolling"
 msgid "Mouse Scrolling"
-msgstr "Mouse scrolling"
+msgstr "Mouse Scrolling"
 
 #: src/hotkeys.cpp:83
 msgid "Status Table"
@@ -3307,16 +3293,14 @@ msgid "Statistics"
 msgstr "Statistics"
 
 #: src/hotkeys.cpp:92
-#, fuzzy
 #| msgid "Host Networked Game"
 msgid "Pause Network Game"
-msgstr "Host Networked Game"
+msgstr "Pause Network Game"
 
 #: src/hotkeys.cpp:93
-#, fuzzy
 #| msgid "Host Networked Game"
 msgid "Continue Network Game"
-msgstr "Host Networked Game"
+msgstr "Continue Network Game"
 
 #: src/hotkeys.cpp:95
 msgid "Set Team Label"
@@ -3339,22 +3323,19 @@ msgid "Best Possible Enemy Moves"
 msgstr "Best Possible Enemy Moves"
 
 #: src/hotkeys.cpp:100
-#, fuzzy
 #| msgid "Save Replay"
 msgid "Play Replay"
-msgstr "Save Replay"
+msgstr "Play Replay"
 
 #: src/hotkeys.cpp:101
-#, fuzzy
 #| msgid "Save Replay"
 msgid "Reset Replay"
-msgstr "Save Replay"
+msgstr "Reset Replay"
 
 #: src/hotkeys.cpp:102
-#, fuzzy
 #| msgid "Save Replay"
 msgid "Stop Replay"
-msgstr "Save Replay"
+msgstr "Stop Replay"
 
 #: src/hotkeys.cpp:103
 msgid "Next Turn"
@@ -3445,10 +3426,9 @@ msgid "Map Information"
 msgstr "Map Information"
 
 #: src/hotkeys.cpp:134
-#, fuzzy
 #| msgid "Swap fore- and background terrains"
 msgid "Swap Foreground/Background Terrains"
-msgstr "Swap fore- and background terrains"
+msgstr "Swap Foreground/Background Terrains"
 
 #: src/hotkeys.cpp:135
 msgid "Next Tool"
@@ -3619,10 +3599,9 @@ msgid "Custom Command"
 msgstr "Custom Command"
 
 #: src/hotkeys.cpp:208
-#, fuzzy
 #| msgid "Run AI formula"
 msgid "Run Formula"
-msgstr "Run AI formula"
+msgstr "Run Formula"
 
 #: src/hotkeys.cpp:209
 msgid "Clear Messages"
@@ -3645,40 +3624,34 @@ msgid "Start Tutorial"
 msgstr "Start Tutorial"
 
 #: src/hotkeys.cpp:241
-#, fuzzy
 #| msgid "Start a campaign"
 msgid "Start Campaign"
-msgstr "Start a campaign"
+msgstr "Start Campaign"
 
 #: src/hotkeys.cpp:248
-#, fuzzy
 #| msgid "Start a multiplayer game"
 msgid "Start Multiplayer Game"
-msgstr "Start a multiplayer game"
+msgstr "Start Multiplayer Game"
 
 #: src/hotkeys.cpp:255
-#, fuzzy
 #| msgid "Manage addons"
 msgid "Manage Add-ons"
-msgstr "Manage addons"
+msgstr "Manage Add-ons"
 
 #: src/hotkeys.cpp:262
-#, fuzzy
 #| msgid "Start the editor"
 msgid "Start Editor"
-msgstr "Start the editor"
+msgstr "Start Editor"
 
 #: src/hotkeys.cpp:269
-#, fuzzy
 #| msgid "Show the credits"
 msgid "Show Credits"
-msgstr "Show the credits"
+msgstr "Show Credits"
 
 #: src/hotkeys.cpp:277
-#, fuzzy
 #| msgid "Show the helptip"
 msgid "Show Helptip"
-msgstr "Show the helptip"
+msgstr "Show Helptip"
 
 #: src/hotkeys.cpp:875 src/hotkeys.cpp:1220
 msgid "Do you really want to quit?"
@@ -3735,10 +3708,9 @@ msgid "Landform:"
 msgstr "Landform:"
 
 #: src/mapgen_dialog.cpp:249
-#, fuzzy
 #| msgid "Roads Between Castles"
 msgid "Roads between castles"
-msgstr "Roads Between Castles"
+msgstr "Roads between castles"
 
 #: src/mapgen_dialog.cpp:306
 msgid "/1000 tiles"
@@ -3775,10 +3747,9 @@ msgid "Hotkey Settings"
 msgstr "Hotkey Settings"
 
 #: src/preferences_display.cpp:282 src/preferences_display.cpp:351
-#, fuzzy
 #| msgid "Press desired Hotkey (Esc cancels)"
 msgid "Press desired hotkey (Esc cancels)"
-msgstr "Press desired Hotkey (Esc cancels)"
+msgstr "Press desired hotkey (Esc cancels)"
 
 #: src/preferences_display.cpp:301
 msgid "Action"
@@ -3798,24 +3769,23 @@ msgstr "Clear Hotkey"
 
 #: src/preferences_display.cpp:394 src/preferences_display.cpp:402
 #: src/preferences_display.cpp:414
-#, fuzzy
 #| msgid "This Hotkey is already in use."
 msgid "This hotkey is already in use."
-msgstr "This Hotkey is already in use."
+msgstr "This hotkey is already in use."
 
 #: src/preferences_display.cpp:429
-#, fuzzy
 #| msgid ""
 #| "Warning: screenshot hotkeys not combined with Control, Alt or Meta keys."
 msgid ""
 "Screenshot hotkeys cannot be combined with the Control, Alt or Meta "
 "modifiers."
 msgstr ""
-"Warning: screenshot hotkeys not combined with Control, Alt or Meta keys."
+"Screenshot hotkeys cannot be combined with the Control, Alt or Meta "
+"modifiers."
 
 #: src/preferences_display.cpp:429
 msgid "Warning"
-msgstr ""
+msgstr "Warning"
 
 #: src/preferences_display.cpp:530
 msgid "There are no alternative video modes available"
