--- a/po/wesnoth-low/en_GB.po
+++ b/po/wesnoth-low/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-08-27 17:23-0500\n"
+"PO-Revision-Date: 2011-10-31 16:35-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -543,7 +543,7 @@ msgstr "Graur-Tan"
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:389
 msgid "Orcs are pressing on us from all directions! To arms!"
-msgstr ""
+msgstr "Orcs are pressing on us from all directions! To arms!"
 
 #. [message]: id=Velon
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:393
@@ -551,16 +551,18 @@ msgid ""
 "Hold, Kalenz. The Ka’lian council should discuss our response. Maybe we can "
 "reach an agreement with them!"
 msgstr ""
+"Hold, Kalenz. The Ka’lian council should discuss our response. Maybe we can "
+"reach an agreement with them!"
 
 #. [message]: id=Qumseh
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:397
 msgid "Surrender or die, tree-shaggers!"
-msgstr ""
+msgstr "Surrender or die, tree-shaggers!"
 
 #. [message]: id=Velon
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:401
 msgid "They are too many. We have no choice but to submit!"
-msgstr ""
+msgstr "They are too many. We have no choice but to submit!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:405
@@ -568,11 +570,13 @@ msgid ""
 "Elves must never surrender to these foul beasts! Who will fight them beside "
 "me?"
 msgstr ""
+"Elves must never surrender to these foul beasts! Who will fight them beside "
+"me?"
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:413
 msgid "We will follow you, Kalenz — but where can we go?"
-msgstr ""
+msgstr "We will follow you, Kalenz — but where can we go?"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:417
@@ -580,13 +584,14 @@ msgid ""
 "We must reach the elvish council in Ka’lian and enlist their help to "
 "recapture our home."
 msgstr ""
+"We must reach the elvish council in Ka’lian and enlist their help to "
+"recapture our home."
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:421
-#, fuzzy
 #| msgid "We surrender!"
 msgid "We are surrounded!"
-msgstr "We surrender!"
+msgstr "We are surrounded!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:425
@@ -594,11 +599,13 @@ msgid ""
 "Then we must storm one of the orcs’ outposts to break the encirclement "
 "before more enemies arrive!"
 msgstr ""
+"Then we must storm one of the orcs’ outposts to break the encirclement "
+"before more enemies arrive!"
 
 #. [message]: id=Anduilas
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:429
 msgid "Very well, Kalenz — lead us!"
-msgstr ""
+msgstr "Very well, Kalenz — lead us!"
 
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:443
