--- a/po/wesnoth-thot/en_GB.po
+++ b/po/wesnoth-thot/en_GB.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.12+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-02-24 03:59+0100\n"
-"Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
+"PO-Revision-Date: 2011-10-31 16:35-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
 "Language: en_GB\n"
@@ -2579,7 +2579,6 @@ msgstr ""
 "often used as envoys between dwarvish clans."
 
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:4
-#, fuzzy
 #| msgid ""
 #| "The presence of this unit inspires own units next to it to deal more "
 #| "damage in combat, though this only applies to units of lower or equal "
@@ -2588,7 +2587,7 @@ msgid ""
 " The presence of this unit inspires own units next to it to deal more damage "
 "in combat, though this only applies to units of lower or equal level."
 msgstr ""
-"The presence of this unit inspires own units next to it to deal more damage "
+" The presence of this unit inspires own units next to it to deal more damage "
 "in combat, though this only applies to units of lower or equal level."
 
 #. [leadership]: id=inspire_0
