Fixed a spelling error in DW.

--- a/po/wesnoth-dw/nl.po
+++ b/po/wesnoth-dw/nl.po
@@ -669,7 +669,7 @@ msgstr ""
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:690
 msgid ""
-"I beleive it is undead and has no will of its own, but the Kai may have the "
+"I believe it is undead and has no will of its own, but the Kai may have the "
 "will power to direct it."
 msgstr ""
 
